@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-26T08:29:02Z",
+  "timestamp" : "2022-08-26T16:32:23Z",
   "count_outdated" : 751,
   "uniques_outdated" : 392,
-  "count" : 768,
+  "count" : 769,
   "uniques" : 402,
   "clones" : [
     {
@@ -63,8 +63,8 @@
     },
     {
       "timestamp": "2022-08-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
